# CG

./: .gitignore
Lab_5/: CMakeLists.txt  Lab_5.cpp
lab_1/Lab_1_1/: Lab_1_1.cpp  Lab_1_1.rc  Lab_1_1.sln  Lab_1_1.vcxproj  Lab_1_1.vcxproj.filters  Resource.h
lab_2/: Lab_2.aps  Lab_2.cpp  Lab_2.rc  Lab_2.sln  Lab_2.vcxproj  Lab_2.vcxproj.filters  Resource.h  framework.h
lab_3/Lab_3_2/: CMakeLists.txt  Lab_3_2.cpp  Lab_3_2.sln  Lab_3_2.vcxproj  Lab_3_2.vcxproj.filters
lab_3/lab_3_1/: CMakeLists.txt  lab_3_1.cpp  lab_3_1.sln  lab_3_1.vcxproj  lab_3_1.vcxproj.filters
lab_4/Lab_4_1/: Lab_4_1.sln  Lab_4_1.vcxproj  main.cpp
lab_4/lab_4_1/: CMakeLists.txt  lab_4_1.cpp  lab_4_1.sln  lab_4_1.vcxproj
lab_4/lab_4_2/lab_4_2/: CMakeLists.txt  lab_4_2.cpp  lab_4_2.sln  lab_4_2.vcxproj
